# summary_meet

./: .gitignore  README.md  pyproject.toml  requirements.txt
requirements/: summarize_video_01.md
src/: main.py  video_summarizer.py
tests/: test_video_summarizer.py
