[project]
name = "summary_meet"
version = "0.1.0"
description = "A tool for summarizing meetings"
requires-python = ">=3.11.11,<3.12"
authors = [
    {name = "rohithtp"}
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "B", "I"] 